--- a/burgerhouses.html
+++ b/burgerhouses.html
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="jscript.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=false" 
-          type="text/javascript">
+	<script src="https://maps.google.com/maps/api/js?sensor=false" 
+          type="text/javascript">               
           	
     </script>
   <script src="gamato.js"></script>  
