new changes to jqueryscripts

--- a/burgerhouses.html
+++ b/burgerhouses.html
@@ -17,7 +17,7 @@
           type="text/javascript"> -->
           	
     </script>
-  <script src="gamato.js"></script>  
+  <script src="jqueryscripts.js"></script>  
 	</head>
 	<style>
 
@@ -136,7 +136,7 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <!-- Brand NAME -->
-    <a class="navbar-brand justify-content-left" href="./index.html"><img src="logo3.png"></a>
+    <a class="navbar-brand justify-content-left" href="./index.html"><img src="./photos/logo3.png"></a>
     <div id="side" class="sidenav" value="reduce">
       <ul>
         <li><a href="./menu!.html">Menu</a></li>
