--- a/menu!.html
+++ b/menu!.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=greek,greek-ext" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="gamato.js"></script>
+<script src="jqueryscripts.js"></script>
 
 </head>
 <style>
@@ -135,7 +135,7 @@ ul {
 	<div class="container-fluid">
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 			<!-- Brand -->
-			<a class="navbar-brand justify-content-left" href="./index.html"><img src="logo3.png"></a>
+			<a class="navbar-brand justify-content-left" href="./index.html"><img src="./photos/logo3.png"></a>
 			<div id="side" class="sidenav" value="reduce">
 				<ul>
 					<li><a href="./menu!.html">Menu</a></li>
@@ -155,21 +155,21 @@ ul {
 		</nav>
 	</div>
 	<div class=container-fluid>
-		<img src="./bg5.jpg" width="100%" max-height="910px">
+		<img src="./photos/bg5.jpg" width="100%" max-height="910px">
 	</div>
 	<div class="container third-cont">
 		<div class="row">
-			<div class="col-xs-4 col-sm-5"><h3>OUR BESTSELLERS</h3><br><p><img src="./cow-silhouette.png" class="smallimages">
+			<div class="col-xs-4 col-sm-5"><h3>OUR BESTSELLERS</h3><br><p><img src="./photos/cow-silhouette.png" class="smallimages">
 				<strong>THE COWBOY 8,7€</strong><br>Με μπέικον, τυρί τσένταρ, καπνιστή BBQ σως και τραγανά χειροποίητα onion crisps!
 			</p><br>
-			<p><img src="./img_74614.png" class="smallimages"><strong>CRISPY CHICKEN 6,9€</strong><br>Φρεσκοφτιαγμένο, τραγανό φιλέτο κοτόπουλο πανέ και Creole σως. Extra τυρί, extra απόλαυση με +0,6€.</p><br>
-			<p><img src="./cow-silhouette.png" class="smallimages"><strong> THE BAD BOY 8,9€</strong><br>Το μαριναρισμένο μπιφτέκι μας, χωριάτικο λουκάνικο στη σχάρα, cheddar σως, λάχανο, καρότο και καραμελωμένη πίκλα. Aθηναϊκό street food με υπογραφή Simply.</p>
+			<p><img src="./photos/img_74614.png" class="smallimages"><strong>CRISPY CHICKEN 6,9€</strong><br>Φρεσκοφτιαγμένο, τραγανό φιλέτο κοτόπουλο πανέ και Creole σως. Extra τυρί, extra απόλαυση με +0,6€.</p><br>
+			<p><img src="./photos/cow-silhouette.png" class="smallimages"><strong> THE BAD BOY 8,9€</strong><br>Το μαριναρισμένο μπιφτέκι μας, χωριάτικο λουκάνικο στη σχάρα, cheddar σως, λάχανο, καρότο και καραμελωμένη πίκλα. Aθηναϊκό street food με υπογραφή Simply.</p>
 		</div>
 		<div class="col-xs-4 col-sm-6"><h3>OUR CLASSICS</h3><br>
-			<p><img src="./cow-silhouette.png" class="smallimages"><strong>BACON CHEESE 7,6€</strong><br>Με τυρί τσένταρ και μπέικον. Κλασικός συνδυασμός. Προσθέστε τηγανιτό αυγό, του πάει πολύ! +0,9€</p><br>
-			<p><img src="./img_74614.png" class="smallimages"><strong>THE CALIFORNIA 6,9€</strong><br>Κοτόπουλο φιλέτο στη σχάρα, λιωμένο τυρί έμενταλ και Creole σως. Δοκιμάστε το με ψωμάκι ολικής άλεσης. Extra μπέικον, extra απόλαυση με +0,9€.</p>
+			<p><img src="./photos/cow-silhouette.png" class="smallimages"><strong>BACON CHEESE 7,6€</strong><br>Με τυρί τσένταρ και μπέικον. Κλασικός συνδυασμός. Προσθέστε τηγανιτό αυγό, του πάει πολύ! +0,9€</p><br>
+			<p><img src="./photos/img_74614.png" class="smallimages"><strong>THE CALIFORNIA 6,9€</strong><br>Κοτόπουλο φιλέτο στη σχάρα, λιωμένο τυρί έμενταλ και Creole σως. Δοκιμάστε το με ψωμάκι ολικής άλεσης. Extra μπέικον, extra απόλαυση με +0,9€.</p>
 			<br>
-		<p><img src="./Vegan-logo.png" class="smallimages"><strong>SWISS MUSHROOM 7,8€</strong><br>Με φρέσκα μανιτάρια σοτέ, καραμελωμένα κρεμμύδια και λιωμένο τυρί έμενταλ.</p
+		<p><img src="./photos/Vegan-logo.png" class="smallimages"><strong>SWISS MUSHROOM 7,8€</strong><br>Με φρέσκα μανιτάρια σοτέ, καραμελωμένα κρεμμύδια και λιωμένο τυρί έμενταλ.</p
 	</div>
 </div>
 <div class="col-xs-4 col-sm-2"><h3>drinks</h3><br>
