--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&amp;subset=greek,greek-ext" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
 
-<script src="gamato.js"></script>
+<script src="jqueryscripts.js"></script>
 </head>
 <style>
 
@@ -235,10 +235,10 @@ ul {
 	<div class="container-fluid">
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 			<!-- Brand -->
-			<a class="navbar-brand justify-content-left" href="./index.html"><img src="logo3.png"></a>
+			<a class="navbar-brand justify-content-left" href="./index.html"><img src="./photos/logo3.png"></a>
 			<div id="side" class="sidenav" value="reduce">
 				<ul>
-					<li><a href="./menu!.html">Menu</a></li>
+					<li><a href="menu!.html">Menu</a></li>
 					<li><a href="./burgerhouses.html">Burger-Houses</a></li>
 					<li><a href="#">Clients</a></li>
 				</ul>
@@ -262,12 +262,12 @@ ul {
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="BurgerBurger.jpg" alt="Los Angeles" width="100%" max-height="741px">
+				<img src="./photos/BurgerBurger.jpg" alt="Los Angeles" width="100%" max-height="741px">
 				<div class="carousel-caption">
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="disco.jpg" alt="Chicago" width="100%" max-height="741px">
+				<img src="./disco.jpg" alt="Chicago" width="100%" max-height="741px">
 				<div class="carousel-caption">
 				</div>
 			</div>
@@ -299,7 +299,7 @@ ul {
 				
 				<div class="col-sm-4 col-xl-4">
 					<div class="place1">
-						<img src="rest1.jpg" max-width="421" height="277">
+						<img src="./photos/rest1.jpg" max-width="421" height="277">
 						<div class="overlay">
 							<div class="text">Euosmos</div>
 						</div>
@@ -307,7 +307,7 @@ ul {
 				</div>
 				<div class="col-sm-4 col-xl-4">
 					<div class="place2">
-						<img src="rest2.jpg" max-width="421" height="277">
+						<img src="./photos/rest2.jpg" max-width="421" height="277">
 						<div class="overlay">
 							<div class="text">Kalamaria</div>
 						</div>
@@ -315,7 +315,7 @@ ul {
 				</div>
 				<div class="col-sm-4 col-xl-4">
 					<div class="place2">
-						<img src="rest3.jpg" max-width="421" height="277">
+						<img src="./photos/rest3.jpg" max-width="421" height="277">
 						<div class="overlay">
 							<div class="text">Kentro</div>
 						</div>
